--- a/src/css/game.css
+++ b/src/css/game.css
@@ -105,6 +105,12 @@
   color: var(--dark);
 }
 
+.game .information .end-turn {
+  position: fixed;
+  bottom: 1.5rem;
+  right: 1.5rem;
+}
+
 .game .resource-list {
   border: 2px solid var(--light);
   border-radius: 1rem;
