Allow to select two roads when playing road_building card

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -103,6 +103,13 @@
   stroke-dasharray: 1px;
 }
 
+.game .board .build-road-indicator.road-building-selected {
+  cursor: unset;
+  stroke: var(--highlight);
+  stroke-dasharray: 1px;
+  transition: 0.2s;
+}
+
 .game .information {
 	top: 0;
 	position: absolute;
